# reddit-crawl-haskell

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.org  crawl.cabal  stack.yaml
config/: config_example.yml
src/: Config.hs  Export.hs  Main.hs  Reddit.hs
