name:                crawl
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/kkweon/crawl#readme
license:             BSD3
license-file:        LICENSE
author:              Kyung Mo Kweon
maintainer:          kkweon@gmail.com
copyright:           (c) 2017 Kyung Mo Kweon
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.org
data-files:          config/config.yml


executable crawl
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Reddit
                     , Export
                     , Config
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , scalpel
                     , curl
                     , HaskellNet
                     , mime-mail
                     , text
                     , yaml
                     , bytestring
                     , aeson
